--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "VideoSubtitlesCld": "^1.0.19",
+    "babel-loader": "^8.0.5",
     "vue": "^2.5.21"
   },
   "devDependencies": {
